--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Olá Mundo</div>
+    <div>
+         <h1>Olá Mundo</h1> 
+    </div>
 </body>
 </html>
